<resources>
    <string name="app_name" translatable="false">Action</string>
    <string name="nav_action">行动</string>
    <string name="nav_achievement">成就</string>
    <string name="nav_explore">发现</string>
    <string name="nav_action_content">行动详情</string>
    <string name="pair_messages" translatable="false">%1$s • %2$s</string>
    <string name="hyphen_messages" translatable="false">%1$s - %2$s</string>
    <string name="default_username">冒险者</string>
    <string name="welcome_text_a">欢迎使用 Action</string>
    <string name="welcome_text_b">贴心的即时环境保护提醒 \n基于传感器数据 更快更精准</string>
    <string name="welcome_text_c">如何称呼您</string>
    <string name="welcome_text_d">设定昵称 挑选头像 \n开始你的环保之旅</string>
    <string name="welcome_text_e">权限检查</string>
    <string name="welcome_text_f">开放权限以帮助应用监测状态 \n您的设备信息将受到妥善保护</string>
    <string name="welcome_text_g">许可协议</string>
    <string name="welcome_text_h">了解 Action 将如何使用你的信息 \n接受协议后继续</string>
    <string name="welcome_text_i">让我们开始吧</string>
    <string name="welcome_text_j">只要行动 就永远不会太晚</string>
    <string name="welcome_username_hint">昵称</string>
    <string name="welcome_username_notice">留空将使用默认昵称</string>
    <string name="welcome_username_error_title">非法输入</string>
    <string name="welcome_username_error">输入过长，继续将使用默认昵称</string>
    <string name="welcome_username_error_positive">继续</string>
    <string name="welcome_username_error_negative">返回</string>
    <string name="welcome_useravatar_error">存储权限未授予</string>
    <string name="welcome_permission_btn">全部授权</string>
    <string name="welcome_permission_btn_disabled">已授权</string>
    <string name="welcome_permission_notice">您亦可稍后授权</string>
    <string name="welcome_permission_location">精确位置信息</string>
    <string name="welcome_permission_location_summary">用于场景识别及天气消息获取</string>
    <string name="welcome_permission_sensor">传感器</string>
    <string name="welcome_permission_sensor_summary">用于场景识别</string>
    <string name="welcome_permission_activity_recognition">身体活动</string>
    <string name="welcome_permission_activity_recognition_summary">用于场景识别</string>
    <string name="welcome_permission_not_granted_title">部分权限未授予</string>
    <string name="welcome_permission_not_granted">您仍可正常使用应用，但部分功能将不可用。\n 请返回上一页，或前往设置页面手动授予权限。</string>
    <string name="welcome_permission_not_granted_positive">继续且不再提醒</string>
    <string name="welcome_permission_not_granted_negative">返回</string>
    <string name="welcome_agreement">我已阅读并接受以上许可协议</string>
    <string name="welcome_agreement_toast">请勾选接受许可协议</string>
    <string name="welcome_done_error_title">存在未处理的问题</string>
    <string name="welcome_done_error">以下若干问题未通过启动前检查： %1$s%2$s%3$s请返回手动修复后再次尝试启动。</string>
    <string name="welcome_done_error_a">- 用户名输入非法\n</string>
    <string name="welcome_done_error_b">- 许可协议未接受\n</string>
    <string name="welcome_done_error_c">- 部分权限未授予\n</string>
    <string name="welcome_done_error_positive">完成</string>
    <string name="welcome_sync_action_success">数据库初始化完成</string>
    <string name="welcome_sync_action_failure">数据化初始化失败，请前往设置页面重试</string>
    <string name="agreement_title">许可协议</string>
    <string name="agreement_sub_title">生效日期：2022年1月4日</string>
    <string name="home_welcome_text_a">你好，</string>
    <string name="home_welcome_text_b">好久不见，</string>
    <string name="home_welcome_text_c">很高兴见到你，</string>
    <string name="action_title_a">只要</string>
    <string name="action_title_b">行动</string>
    <string name="action_title_c">就永远不会太晚</string>
    <string name="action_now_label">现在行动</string>
    <string name="action_now_label_description">根据你的状态推荐的行动</string>
    <string name="action_suggest_more">建议</string>
    <string name="action_suggest_more_description">更多有助于保护环境的建议</string>
    <string name="action_now_empty">您还没有获取到任何行动哦</string>
    <string name="suggest_more_empty">您获取的建议会显示在此处</string>
    <string name="achievement_toolbar_history">历史</string>
    <string name="refresh">刷新</string>
    <string name="action_content_toolbar_share">分享</string>
    <string name="action_content_toolbar_switch">切换状态</string>
    <string name="action_content_fab_mark">标记完成</string>
    <string name="action_content_fab_unmark">撤销标记</string>
    <string name="action_content_fab_ignore">暂时忽略</string>
    <string name="action_content_fab_ignored">已忽略</string>
    <string name="action_content_hightlight">关键信息</string>
    <string name="action_content_switch_finish_state">已切换完成状态</string>
    <string name="title">标题</string>
    <string name="subhead">副标题</string>
    <string name="go_further">前往</string>
    <string name="ignore">忽略</string>
    <string name="get_suggestions">获取建议</string>
    <string name="revoke">撤销</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="processing">请勿重复点击</string>
    <string name="achievement_total_a">哇噢！你已累计完成了不同类型的行动</string>
    <string name="achievement_total_c">次</string>
    <string name="achievement_water">节约水资源</string>
    <string name="achievement_water_unit" translatable="false">m³</string>
    <string name="achievement_electricity">节约电力</string>
    <string name="achievement_electricity_unit" translatable="false">kWh</string>
    <string name="achievement_tree">保护树木</string>
    <string name="achievement_tree_unit">株</string>
    <string name="achievement_text_a">行动起来！</string>
    <string name="achievement_text_b">再接再厉！</string>
    <string name="achievement_text_c">你是一位英雄！</string>
    <string name="achievement_xp_needed">你还需要额外 %1$s 经验来提升到等级 %2$s</string>
    <string name="achievement_gained">已解锁的成就</string>
    <string name="achievement_sort_by_alpha">按字母顺序排序</string>
    <string name="achievement_sort_by_time">按解锁时间排序</string>
    <string name="achievement_pair_messages" translatable="false">%1$s • %2$sXP</string>
    <string name="weather_location">地区</string>
    <string name="weather_skycon">晴朗</string>
    <string name="weather_temperature_now" translatable="false">12°</string>
    <string name="weather_temperature_lowest" translatable="false">8°</string>
    <string name="weather_temperature_highest" translatable="false">16°</string>
    <string name="weather_temperature_template" translatable="false">10°</string>
    <string name="weather_time_template" translatable="false">10:00</string>
    <string name="weather_tomorrow">明天</string>
    <string name="weather_the_day_after_tomorrow">后天</string>
    <string name="weather_temperature_value" translatable="false">%1$s°</string>
    <string name="weather_time_value" translatable="false">%1$s:00</string>
    <string name="life">生活</string>
    <string name="air">大气污染</string>
    <string name="life_ultraviolet">紫外线</string>
    <string name="life_comfort">舒适度</string>
    <string name="weather_type_clear">晴</string>
    <string name="weather_type_partly_cloudy">多云</string>
    <string name="weather_type_cloudy">阴</string>
    <string name="weather_type_light_haze">轻度雾霾</string>
    <string name="weather_type_moderate_haze">中度雾霾</string>
    <string name="weather_type_heavy_haze">重度雾霾</string>
    <string name="weather_type_light_rain">小雨</string>
    <string name="weather_type_moderate_rain">中雨</string>
    <string name="weather_type_heavy_rain">大雨</string>
    <string name="weather_type_storm_rain">暴雨</string>
    <string name="weather_type_fog">雾</string>
    <string name="weather_type_light_snow">小雪</string>
    <string name="weather_type_moderate_snow">中雪</string>
    <string name="weather_type_heavy_snow">大雪</string>
    <string name="weather_type_storm_snow">暴雪</string>
    <string name="weather_type_dust">浮尘</string>
    <string name="weather_type_sand">沙尘</string>
    <string name="weather_type_wind">大风</string>
    <string name="loading_location">定位中</string>
    <string name="loading_location_failed">定位失败</string>
    <string name="loading_data">数据获取中</string>
    <string name="loading_data_failed">数据更新失败</string>
    <string name="network_success">刷新成功</string>
    <string name="network_error">网络错误，请重试</string>
    <string name="location_permission_denied">定位权限未授予</string>
    <string name="go_to_authorization">前往授权</string>
    <string name="explore_action">所有行动</string>
    <string name="explore_action_description">查看曾触发的所有 %1$s 条行动</string>
    <string name="explore_suggest">历史建议及归档</string>
    <string name="explore_suggest_description">查看所有 %1$s 条已阅读建议</string>
    <string name="setting">设置</string>
    <string name="help_and_support">帮助与支持</string>
    <string name="vote">为此应用评分</string>
    <string name="about">关于此应用</string>
    <string name="version">版本信息</string>
    <string name="suggest_content_archive">归档</string>
    <string name="suggest_content_vote">点赞内容·</string>
    <string name="suggest_content_read">标记已读</string>
    <string name="suggest_content_source">访问来源</string>
    <string name="action_history_history_trigger">触发条件</string>
    <string name="suggest_archive_head">所有建议</string>
    <string name="suggest_archive_tab_history">历史</string>
    <string name="suggest_archive_tab_archive">归档</string>
    <string name="sample_number" translatable="false">80</string>
    <string name="sample_month" translatable="false">12月</string>
    <string name="sample_day" translatable="false">14</string>
    <string name="behavior_header">行为</string>
    <string name="language_header">语言</string>
    <string name="appearance_header">用户界面</string>
    <string name="weather_header">天气</string>
    <string name="notification_header">通知</string>
    <string name="other_header">杂项</string>
    <string name="problem_header">常见问题</string>
    <string name="contact_header">联系开发者</string>
    <string name="log_header">日志</string>
    <string name="permission_title">授予权限</string>
    <string name="account_title">账户</string>
    <string name="action_expired_title">行动自动过期时间</string>
    <string name="suggest_auto_mark_title">自动标记已阅</string>
    <string name="suggest_auto_get_title">定期获取新建议</string>
    <string name="permission_summary">开放权限以帮助应用监测状态</string>
    <string name="account_summary">更改本地账户信息</string>
    <string name="suggest_auto_mark_summary">查看新建议时自动标记阅读\n 仅已阅读建议于历史记录可见</string>
    <string name="suggest_auto_get_summary_on">自动从数据库获取新建议\n 该功能在定制UI上运行不稳定</string>
    <string name="suggest_auto_get_summary_off">如有必要 您仍可手动获取</string>
    <string name="language_title">语言</string>
    <string name="color_title">主题颜色</string>
    <string name="dark_mode_title">深色模式</string>
    <string name="dynamic_color_title">动态颜色主题</string>
    <string name="dynamic_color_summary">根据壁纸自动选择应用主题色 \n仅 Android 12（API 31）可用</string>
    <string name="locate_title">始终重新定位</string>
    <string name="set_location_title">常用地址</string>
    <string name="locate_summary">启动应用时自动定位并获取天气信息</string>
    <string name="set_location_summary">设置常用地址以避免反复定位</string>
    <string name="notification_type_title">接收通知类型</string>
    <string name="notification_action_title">触发行动时的通知优先级</string>
    <string name="guide_title">运行启动向导</string>
    <string name="guide_summary">重新运行初次启动向导</string>
    <string name="location_title">精确位置信息</string>
    <string name="location_summary">用于场景识别及天气消息获取</string>
    <string name="sensor_title">传感器</string>
    <string name="sensor_summary">用于场景识别</string>
    <string name="storage_title">文件和媒体</string>
    <string name="storage_summary">用于文件交互</string>
    <string name="activity_recognition_title">身体活动</string>
    <string name="activity_recognition_summary">用于场景识别</string>
    <string name="all_granted">全部授予</string>
    <string name="all_granted_summary">将弹出授权弹窗</string>
    <string name="username_title">如何称呼您</string>
    <string name="avatar_title">用户头像</string>
    <string name="clear_account_title">清空个人进度</string>
    <string name="avatar_summary">头像将于首页展示</string>
    <string name="clear_account_summary">清除所有行动记录，经验值与成就</string>
    <string name="manual_title">帮助手册</string>
    <string name="email_title">发送邮件</string>
    <string name="tg_title">加入讨论群组</string>
    <string name="log_title">查看日志</string>
</resources>