<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/problem_header">

        <Preference
            app:key="problem_action"
            app:title="@string/manual_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/contact_header">

        <Preference
            app:key="email"
            app:title="@string/email_title" />

        <Preference
            app:key="tg"
            app:title="@string/tg_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/log_header">

        <Preference
            app:key="log"
            app:title="@string/log_title" />

    </PreferenceCategory>
</PreferenceScreen>