<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="Username"
        android:key="username"
        android:singleLine="true"
        android:title="@string/username_title"
        app:useSimpleSummaryProvider="true" />

    <com.ojhdtapp.action.ui.settings.AvatarPreference
        android:layout="@layout/preference_material"
        app:key="userAvatarURI"
        app:summary="@string/avatar_summary"
        app:title="@string/avatar_title"
        app:widgetLayout="@layout/preference_material_avatar"/>

    <Preference
        app:key="clear_account"
        app:summary="@string/clear_account_summary"
        app:title="@string/clear_account_title" />

</PreferenceScreen>