<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="132dp"
    android:background="@drawable/action_headline_bg"
    android:paddingHorizontal="24dp"
    android:paddingVertical="60dp">

    <TextView
        android:id="@+id/actionTitleATextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_title_a"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/actionTitleBTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/actionTitleBTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_title_b"
        android:textAppearance="?attr/textAppearanceDisplayLarge"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/actionTitleCTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionTitleATextView" />

    <TextView
        android:id="@+id/actionTitleCTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_title_c"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionTitleBTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>