<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:paddingHorizontal="24dp"
    android:paddingTop="12dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/suggestArchiveImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="?attr/colorPrimaryContainer"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/suggestArchiveSubhead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/subhead"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/suggestArchiveTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    app:layout_constraintEnd_toEndOf="@+id/suggestArchiveSubhead"
                    app:layout_constraintStart_toStartOf="@+id/suggestArchiveSubhead"
                    app:layout_constraintTop_toBottomOf="@+id/suggestArchiveSubhead" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/suggestArchiveIgnoreBtn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/ignore"
                    app:layout_constraintBottom_toBottomOf="@+id/suggestArchiveConfirmBtn"
                    app:layout_constraintEnd_toStartOf="@+id/suggestArchiveConfirmBtn"
                    app:layout_constraintTop_toTopOf="@+id/suggestArchiveConfirmBtn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/suggestArchiveConfirmBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/go_further"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/suggestArchiveTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.appcompat.widget.LinearLayoutCompat>